# NoMaD

./: .gitmodules  README.md  exe.sh
nomad/: CMakeLists.txt  package.xml
nomad/deploy/: deploy_nomad.yaml
nomad/deploy/config/: controller.yaml
nomad/deploy/scripts/: create_topomap.py  navigate.py  pd_controller.py  ros_data.py  utils.py
nomad/exe/: cleanup.sh  run.sh  setup.sh  train.sh  tune.sh
nomad/preprocessing/: pickle_data.py  process_bag_diff.py  process_data_utils.py
nomad/train/: data_split.py  train.py  train_nomad.yaml
nomad/train/config/: model.yaml
nomad/train/vint_train/data/: data_config.yaml
nomad/train/vint_train/models/: nomad_vint.py
nomad/train/vint_train/training/: train_eval_loop.py  train_utils.py
